welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:20: error: illegal start of simple expression
while(final()==false) {
      ^SnakeBuggle:31: error: ')' expected but '}' found.
}
^