welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	def fini():Boolean = {
		if(estfaceMur) {
		getDirection()
		if (getDirection()==Direction.EST){
			gauche() 
			if(estFaceMur) { droite(); return true }
			else { droite() ;return false}
		}
		else { droite() 
		if(estFaceMur) { gauche();return true }
		else { gauche();return false}
		}
	}


else{return false}
}

while(final()==false) {
	while(!estFaceMur){
		baisseBrosse();avance()
	}
	if(getDirection()==Direction.EST && final()==false) {
		gauche();avance();gauche()
	}
	if(getDirection()==Direction.OUEST && final() && estFaceMur ){
		droite();avance();droite();
	}
}
}
